NUMBERS-83: Replace calls to JDK deprecated API.